--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -7,9 +7,19 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Desafio 3 - Programar</title>
+    <style>
+        .cursor-pointer {
+            cursor: pointer;
+        }
+        .search-box {
+            display: none;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <header class="header-custom">
@@ -32,8 +42,13 @@
 <main role="main">
     <div class="album py-5">
         <div class="container">
-            <h4 class="sub-title">Artigos recomendados</h4>
-            <div class="row">
+            <div class="d-flex justify-content-between align-items-center pb-3">
+                <h4 class="sub-title mb-0">Artigos recomendados</h4>
+                <i class="fas fa-search cursor-pointer" id="searchIcon"></i>
+            </div>
+            <input type="text" class="form-control search-box" id="searchBox" placeholder="Buscar...">
+    
+            <div class="row mt-4">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card card-custom">
                         <img src="./image/image-1.png" class="card-img-top" alt="...">
@@ -112,6 +127,8 @@
         </div>
     </div>
 </footer>
+
+<script src="script.js"></script>
 
 </body>
 </html>
