--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -11,15 +11,6 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Desafio 3 - Programar</title>
-    <style>
-        .cursor-pointer {
-            cursor: pointer;
-        }
-        .search-box {
-            display: none;
-            margin-top: 10px;
-        }
-    </style>
 </head>
 <body>
     <header class="header-custom">
@@ -49,7 +40,7 @@
             <input type="text" class="form-control search-box" id="searchBox" placeholder="Buscar...">
     
             <div class="row mt-4" id="cardContainer">
-                <div class="col-lg-4 col-md-6 mb-4">
+                <div class="col-lg-4 col-md-6 mb-4 article" data-title="linguagem de programação">
                     <div class="card card-custom">
                         <img src="./image/image-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -58,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4">
+                <div class="col-lg-4 col-md-6 mb-4 article" data-title="python data science finanças">
                     <div class="card card-custom">
                         <img src="./image/image-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -67,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4">
+                <div class="col-lg-4 col-md-6 mb-4 article" data-title="GitHub receita usuários">
                     <div class="card card-custom">
                         <img src="./image/image-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -106,9 +97,7 @@
             </div>
             <div class="text-center mt-4">
                 <button id="loadMore" class="btn btn-custom"><i class="fas fa-plus"></i> Mais Artigos</button>
-                <ea-load-more label-text="Carregar mais" quantity="9" slot="load-more" title="" theme="light" tabindex="0">
-                    Carregar mais
-                </ea-load-more>
+                <ea-load-more label-text="Carregar mais" quantity="9" slot="load-more" title="" theme="light" tabindex="0"></ea-load-more>
             </div>
         </div>
     </div>
